--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -230,7 +230,7 @@ Abilities:
         Super_Breaker: 0
         Tree_Feller: 0
     Limits:
-       Tree_Feller_Threshold: 500
+        Tree_Feller_Threshold: 500
     Tools:
         # Use more tool durability while using abilities. Set Durability_Loss to 0 to disable the extra durability damage.
         Durability_Loss: 1
@@ -375,12 +375,12 @@ Commands:
     partychat:
         Chat_Prefix_Format: '[[GREEN]]([[WHITE]]{0}[[GREEN]])'
 
-        # Allow mcMMO to use player display names in chat instead of their usernames
+        # Allow mcMMO to use player display names in party chat instead of their usernames
         Use_Display_Names: true
     adminchat:
         Chat_Prefix_Format: '[[AQUA]][[[WHITE]]{0}[[AQUA]]]'
 
-        # Allow mcMMO to use player display names in chat instead of their usernames
+        # Allow mcMMO to use player display names in admin chat instead of their usernames
         Use_Display_Names: true
 
 #
