Add Alchemy hardcore settings to default config.yml file
These setting were already working, just forgot to add them to the
default file as well.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -135,6 +135,7 @@ Hardcore:
         Level_Threshold: 0
         Enabled:
             Acrobatics: false
+            Alchemy: false
             Archery: false
             Axes: false
             Excavation: false
@@ -151,6 +152,7 @@ Hardcore:
         Level_Threshold: 0
         Enabled:
             Acrobatics: false
+            Alchemy: false
             Archery: false
             Axes: false
             Excavation: false
