Added custom XP boost perk

--- a/src/main/resources/experience.yml
+++ b/src/main/resources/experience.yml
@@ -54,6 +54,11 @@ Experience_Formula:
         Fishing: 1.0
         Alchemy: 1.0
 
+    # XP earned by players with the permission mcmmo.perks.xp.customboost.<skillname> will get multiplied
+    # with 1.25 by default, resulting in a 25% XP boost
+    Custom_XP_Perk:
+        Boost: 1.25
+
 #
 #  Settings for XP conversion with '/mcconvert experience'
 ###
